# cue

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  STATUS.md  SUPPORT.md  generate-icon.swift  install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml  security-audit.yml  update-homebrew-tap.yml
Sources/: DashboardView.swift  Models.swift  SessionMonitor.swift  UsageAggregator.swift  UsageView.swift  main.swift
assets/logo-explorations/: index.html
claude-cue-desktop/: INSTALL.md  index.html  package-lock.json  package.json  vite.config.ts
claude-cue-desktop/plans/: audio_presets_agent_plan.md  audio_presets_implement_state.json  piano_string_physics_implement_state.json
claude-cue-desktop/specs/: audio_presets.spec.md  piano_string_physics.spec.md
claude-cue-desktop/src/: App.tsx  main.tsx
claude-cue-desktop/src-tauri/: Cargo.toml  claude-cue.desktop  tauri.conf.json
claude-cue-desktop/src-tauri/capabilities/: default.json
claude-cue-desktop/src-tauri/icons/: generate-icons.sh
claude-cue-desktop/src-tauri/src/: cli.rs  config_counter.rs  env_detect.rs  jsonl_parser.rs  lib.rs  main.rs  models.rs  paths.rs  permission_log.rs  permission_server.rs  security.rs  session_monitor.rs  settings.rs  summary_formatter.rs  system_info.rs  tray.rs  usage_aggregator.rs
claude-cue-desktop/src-tauri/tests/fixtures/: basic_assistant.jsonl  custom_title.jsonl
cue-desktop/: INSTALL.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cue-desktop/plans/: audio_presets_agent_plan.md  sand_effect_implement_state.json
cue-desktop/scripts/: build-and-notarize.sh  build.sh  dev-restart.sh
cue-desktop/specs/: audio_signal_string.spec.md
cue-desktop/src/: App.tsx  main.tsx
cue-desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  cue.desktop  tauri.conf.json
cue-desktop/src-tauri/.cargo/: audit.toml
cue-desktop/src-tauri/capabilities/: default.json
cue-desktop/src-tauri/icons/: generate-icons.sh  icon.icns
cue-desktop/src-tauri/macos/: Cue.entitlements
cue-desktop/src-tauri/sidecar/: cue-audio-tap.swift
cue-desktop/src-tauri/src/: cli.rs  config_counter.rs  env_detect.rs  git_status.rs  jsonl_parser.rs  lib.rs  live_audio.rs  logging.rs  main.rs  model_context.rs  models.rs  notifier.rs  paths.rs  permission_log.rs  permission_server.rs  security.rs  session_monitor.rs  settings.rs  summary_formatter.rs  system_info.rs  tray.rs
cue-desktop/src-tauri/tests/fixtures/: iso_timestamps.jsonl  malformed.jsonl  tool_use.jsonl
docs/: RELEASE_CHECKLIST.md
hooks/: claude-status-hook  cue-hook  cue-statusline
plans/: cross_platform_final_plan.md  cross_platform_plan_a.md  cross_platform_plan_c.md  cross_platform_review.md  live_listen_agent_plan.md  live_listen_implement_state.json  permission_request_ui_agent_plan.md  phase0_prompt.md  phase1_prompt.md  phase2_prompt.md  phase3_prompt.md  phase4_prompt.md  phase5_prompt.md  phase6_prompt.md
plans/audit/: findings_correctness.md  findings_protocol.md  findings_reliability.md  findings_security.md  findings_tests.md  findings_types.md  improvement_plan.md  run.json  state_reliability_audit_2026-06-09.md  target_files.txt
scripts/: go-public.sh
scripts/homebrew/: download-stats.sh  render-cask.sh
specs/: account_usage_tab.spec.md  cli_full_stats.spec.md  dark_mode.spec.md  live_listen.spec.md  permission_request_ui.spec.md  session_id_display.spec.md
tests/hooks/: conftest.py  requirements.txt  test_cue_hook.py  test_cue_statusline.py
tests/manual/: README.md  capture-2026-06-09.jsonl  (+2 more)
website/: index.html  main.js  style.css
(+102 files in other folders)
