[package]
name = "claude-cue-desktop"
version = "0.1.0"
description = "Cross-platform Claude Code session monitor"
authors = []
edition = "2021"

[lib]
name = "claude_cue_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-cue-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
tiny-skia = "0.11"
png = "0.17"
sysinfo = "0.33"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
