[package]
name = "cue-desktop"
version = "0.2.0"
description = "Cross-platform Claude Code session monitor"
authors = ["Andrew von Bereghy"]
license = "MIT"
edition = "2021"

[lib]
name = "cue_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Cue"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
tiny-skia = "0.12"
png = "0.18"
sysinfo = "0.39"
objc2-foundation = "0.3.2"
objc2 = "0.6.4"
raw-window-handle = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
