[package]
name = "cue-desktop"
version = "0.5.3"
description = "Cross-platform Claude Code session monitor"
authors = ["Andrew von Bereghy"]
license = "MIT"
edition = "2021"

[lib]
name = "cue_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Cue"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
hmac = "0.13"
sha2 = "0.10"
tiny-skia = "0.12"
png = "0.18"
sysinfo = "0.39"
raw-window-handle = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# objc2 only compiles on Apple platforms (the crate has a compile_error! guard
# for non-Apple targets), so it must be gated to macOS specifically — NOT
# cfg(unix), since Linux is unix too and would still try to build it. All objc2
# usage in src/lib.rs is already behind #[cfg(target_os = "macos")].
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3.2"
objc2 = "0.6.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
